--- a/src/style.scss
+++ b/src/style.scss
@@ -34,14 +34,14 @@ body{
     align-items: center;
 
     .logo {
-      color: #4b494c;
+      color: black;
       font-weight: bold;
       font-size: 24px;
 
     }
 
     .title {
-      color: #4b494c;
+      color: black;
       font-size: 12px;
     }
 
@@ -61,8 +61,8 @@ body{
       }
 
       button {
-        background-color: #4b494c;
-        color: white;
+        background-color: black;
+        color: #e6e9ff;
         padding: 10px;
         font-weight: bold;
         border: none;
@@ -116,7 +116,7 @@ body{
       .navbar {
         display: flex;
         align-items: center;
-        background-color: #4b494c;
+        background-color: black;
         height: 50px;
         padding: 10px;
         justify-content: space-between;
@@ -142,8 +142,8 @@ body{
           }
 
           button {
-            background-color: #a18267;
-            color: #ddddf7;
+            background-color: #e6e9ff;
+            color: black;
             font-size: 10px;
             border: none;
             cursor: pointer;
@@ -158,7 +158,7 @@ body{
 
       
       .search {
-        border-bottom: 1px solid gray;
+        border-bottom: 1px solid #e6e9ff;
 
         .searchForm {
           padding: 10px;
@@ -170,7 +170,7 @@ body{
             outline: none;
 
             &::placeholder {
-              color: rgb(33, 29, 29);
+              color: black;
             }
           }
         }
@@ -185,7 +185,7 @@ body{
         cursor: pointer;
 
         &:hover {
-          background-color: #08373b;
+          background-color: #e6e9ff;
         }
 
         img {
@@ -212,14 +212,14 @@ body{
 
       .chatInfo {
         height: 50px;
-        background-color: #2f2d52;
+        background-color: black;
        
-        background-color: #a18267;
+        background-color: #e6e9ff;
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 10px;
-        color: lightgray;
+        color: black;
       }
 
       .chatIcons {
@@ -281,7 +281,7 @@ body{
             .messageContent {
               align-items: flex-end;
               p {
-                background-color: #8da4f1;
+                background-color: black;
                 color: white;
                 border-radius: 10px 0px 10px 10px;
               }
@@ -292,7 +292,7 @@ body{
 
       .input {
         height: 50px;
-        background-color: white;
+        background-color: #e6e9ff;
         padding: 10px;
         display: flex;
         align-items: center;
@@ -306,7 +306,7 @@ body{
           font-size: 18px;
 
           &::placeholder {
-            color: lightgray;
+            color: gray;
           }
         }
 
@@ -324,7 +324,7 @@ body{
             border: none;
             padding: 10px 15px;
             color: white;
-            background-color: #a18267;
+            background-color: black;
             cursor: pointer;
           }
         }
